Move xrCore/Platform.hpp -> Common/Platform.hpp.

--- a/src/Common/Common.vcxproj.filters
+++ b/src/Common/Common.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="PlatformLinux.hpp">
       <Filter>Platform</Filter>
     </ClInclude>
+    <ClInclude Include="Platform.hpp">
+      <Filter>Platform</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="NvMender2003">
