--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -126,6 +126,7 @@
     <ClInclude Include="object_loader.h" />
     <ClInclude Include="object_saver.h" />
     <ClInclude Include="object_type_traits.h" />
+    <ClInclude Include="Platform.hpp" />
     <ClInclude Include="PlatformLinux.hpp" />
     <ClInclude Include="PlatformWindows.hpp" />
     <ClInclude Include="Util.hpp" />
