Move Windows-specific stuff to PlatformWindows.inl.

--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -127,8 +127,8 @@
     <ClInclude Include="object_saver.h" />
     <ClInclude Include="object_type_traits.h" />
     <ClInclude Include="Platform.hpp" />
-    <ClInclude Include="PlatformLinux.hpp" />
-    <ClInclude Include="PlatformWindows.hpp" />
+    <ClInclude Include="PlatformLinux.inl" />
+    <ClInclude Include="PlatformWindows.inl" />
     <ClInclude Include="Util.hpp" />
     <ClInclude Include="_d3d_extensions.h" />
   </ItemGroup>
